force-app/main/default/objects/Technician__c/fields/Allowed_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Utilization__c</fullName>
    <formula>1 - Utilization__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allowed Utilization</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>