force-app/main/default/objects/Technician__c/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <label>Function</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Body-Worker</fullName>
            </value>
            <value>
                <fullName>Electrician</fullName>
            </value>
            <value>
                <fullName>Mechanic</fullName>
            </value>
            <value>
                <fullName>Painter</fullName>
            </value>
            <value>
                <fullName>Washer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>